--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,28 +1,34 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-// $font-size-root: 20px;
-.required .v-input__control :not(.v-input__slot) label::after {
-    content: ' *';
-    color: red;
-  }
-  .error-toast {
-    font-family: 'Open Sans', 'Roboto', 'Arial', 'Helvetica';
-    background-color: rgb(222, 80, 80) !important;
-    color: white;
-  }
-  .alert-toast {
-    font-family: 'Open Sans', 'Roboto', 'Arial', 'Helvetica';
-    background-color: #fbc02d !important;
-    color: rgb(55, 55, 55) !important;
-    font-weight: 600 !important;
-  }
-  .success-toast {
-    font-family: 'Open Sans', 'Roboto', 'Arial', 'Helvetica';
-    background-color: #32ac22 !important;
-    color: white;
-  }
 
-.page-background{
-background-color: rgb(247, 247, 247)
+.required .v-input__control :not(.v-input__slot) label::after {
+  content: " *";
+  color: red;
 }
+.error-toast {
+  font-family: "Open Sans", "Roboto", "Arial", "Helvetica";
+  background-color: rgb(222, 80, 80) !important;
+  color: white;
+}
+.alert-toast {
+  font-family: "Open Sans", "Roboto", "Arial", "Helvetica";
+  background-color: #fbc02d !important;
+  color: rgb(55, 55, 55) !important;
+  font-weight: 600 !important;
+}
+.success-toast {
+  font-family: "Open Sans", "Roboto", "Arial", "Helvetica";
+  background-color: #32ac22 !important;
+  color: white;
+}
+
+.page-background {
+  background-color: rgb(247, 247, 247);
+}
+
+$font-size-root: 14px;
+$input-font-size: 14px;
+$list-item-title-font-size: 1rem;
+$list-item-dense-title-font-size: 1rem;
+$data-table-regular-header-font-size: 0.9rem;
